# QueryCraft

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  insert-example.cpp  remove-example.cpp  select-example.cpp  update-example.cpp
include/QueryCraft/: conditiongroup.h  joincolumn.h  querycraft.h  querycraft_global.h  sortcolumn.h  sqltable.h  table.h
include/QueryCraft/enum/: conditionviewtype.h  logicaloperator.h
include/QueryCraft/helper/: tuplehelper.h  typeconverter.h
include/QueryCraft/operator/: equalsoperator.h  inoperator.h  ioperator.h  isnotoperator.h  isoperator.h  lessoperator.h  lessorequalsoperator.h  likeoperator.h  moreoperator.h  moreorequalsoperator.h  notequalsoperator.h  notinoperator.h
src/: conditiongroup.cpp  joincolumn.cpp  sortcolumn.cpp  sqltable.cpp  table.cpp
src/operator/: equalsoperator.cpp  inoperator.cpp  isnotoperator.cpp  isoperator.cpp  lessoperator.cpp  lessorequalsoperator.cpp  likeoperator.cpp  moreoperator.cpp  moreorequalsoperator.cpp  notequalsoperator.cpp  notinoperator.cpp
